# smart-gate

./: .gitignore  CMakeLists.txt  Makefile  README.md  loop  loop.cpp  recognize.cpp  test.py  train.cpp  train.ipynb
motor/: led  led.cpp  main  main.cpp  servo  servo.cpp
utils/: embeddings.xml  labels.txt
